5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1637_2447.log
== TEST (2019-04-09 10:19:51) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p1 > p2):
	msg = "Falta" + X
else:
	msg + "Falta" + Y
	
print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    msg = "Falta" + X
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:20:12) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p1 > p2):
	msg = "Falta" + X
else:
	msg = "Falta" + Y
	
print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    msg = "Falta" + X
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:21:35) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p1 > p2):
	msg = "Falta" + "X"
else:
	msg = "Falta" + "Y"
	
print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(msg, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:21:44) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p1 > p2):
	msg = "Falta" + "X"
else:
	msg = "Falta" + "Y"
	
print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    print(round(msg, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:27:23) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

msg1 = " Falta " + "X"

msg2 = " Troco de " + "Y"

if (p2 >= p1):
	msg = msg2
else:
	msg = msg1
	
print(round(msg, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 18, in <module>
    print(round(msg, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:34) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

msg1 = " Falta " + "X"

msg2 = " Troco de " + "Y"

if (p2 >= p1):
	msg = msg2
else:
	msg = msg1
	
print(msg)
-- OUTPUT:
Falta X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:29:07) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

msg1 = " Falta " + X

msg2 = " Troco de " + Y

if (p2 >= p1):
	msg = msg2
else:
	msg = msg1
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    msg1 = " Falta " + X
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:31:30) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

m1 = " Falta "

m2 = " Troco de "

msg1 = m1 + X

msg2 = m2 + Y

if (p2 >= p1):
	msg = msg2
else:
	msg = msg1
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    msg1 = m1 + X
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:34:51) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p2 >= p1):
	print(" Troco de " + Y)
else:
	print(" Falta " X)
-- ERROR:
File "XXXX", line 12
    print(" Falta " X)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:38:32) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p2 >= p1):
	msg = " Troco de " + Y
else:
	msg = " Troco de " + X
	
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    msg = " Troco de " + X
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:11) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p2 >= p1):
	print(" Troco de " , Y)
else:
	print(" Troco de " , X)
-- OUTPUT:
Troco de  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:40:50) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p2 >= p1):
	print("Troco de" , Y)
else:
	print("Falta" , X)
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:40:59) 
-- CODE:
p1 = float(input("Digite aqui o preco: "))

p2 = float(input("Digite aqui o valor do pagamento: "))

X = p1 - p2

Y = p2 - p1

if (p2 >= p1):
	print("Troco de" , Y)
else:
	print("Falta" , X)
-- EXECUTION TIME:
0.19931
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
